# poker-coach

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.ui  Procfile  README.md  docker-compose.yml  pyproject.toml  railway.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: config.py  main.py
app/api/routers/: __init__.py  auth.py  hands.py  sessions.py  stats.py  tables.py
app/auth/: __init__.py
app/db/: session.py
app/db/models/: __init__.py
app/schemas/: __init__.py
app/services/: advisor_service.py  alignment_service.py  bankroll_service.py  stats_service.py
gto_advisor/: __init__.py  evaluator.py  models.py  monte_carlo.py  postflop.py  preflop.py  ranges.py
tests/: test_engine.py
ui/: api_client.py  app.py
ui/pages/: 1_auth.py  2_tables.py  3_sessions.py  4_new_hand.py  5_dashboard.py
